# unimrcp-sippulse-plugin

./: configure.ac  unimrcp.service  unimrcpserver-sippulse.xml
plugins/: Makefile.am
plugins/sippulse-recog/: Makefile  Makefile.in
plugins/sippulse-recog/src/: bot_example.py  sippulse_recog_engine.c
plugins/sippulse-synth/: Makefile  Makefile.am  Makefile.in  sippulsesynth.vcproj  sippulsesynth.vcxproj  sippulsesynth.vcxproj.filters
plugins/sippulse-synth/src/: sippulse_synth_engine.c
sippulse-recog/: Makefile  Makefile.am
sippulse-recog/src/: sippulse_recog_engine.c
