MAINTAINERCLEANFILES   = Makefile.in

SUBDIRS                =

if DEMOSYNTH_PLUGIN
SUBDIRS               += demo-synth
endif

if DEMORECOG_PLUGIN
SUBDIRS               += demo-recog
endif

if DEMOVERIFIER_PLUGIN
SUBDIRS               += demo-verifier
endif

if RECORDER_PLUGIN
SUBDIRS               += mrcp-recorder
endif

if SIPPULSERECOG_PLUGIN
SUBDIRS               += sippulse-recog
endif

if SIPPULSESYNTH_PLUGIN
SUBDIRS               += sippulse-synth
endif
